--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar" id="navbar">
         <ul class="nav-left">
-            <li><a href="index.html">Bojan Spasovskia</a></li>
+            <li><a href="index.html">Bojan Spasovski</a></li>
         </ul>
         <ul class="nav-right">
             <li><a href="index.html">Home</a></li>
